--- a/section/captureData/customFields.mdx
+++ b/section/captureData/customFields.mdx
@@ -12,12 +12,12 @@ radio buttons, dropdowns, date pickers or free text input.
 <img
     className="block dark:hidden"
     src="/images/kwikFit.png"
-    alt="Example Datacapture for Kwik Fit"
+    alt="Example DataCapture for Kwik Fit"
     />
     <img
     className="hidden dark:block"
     src="/images/kwikFit.png"
-    alt="Example Datacapture for Kwik Fit"
+    alt="Example DataCapture for Kwik Fit"
 />
 </Frame>
 
