--- a/section/captureData/overview.mdx
+++ b/section/captureData/overview.mdx
@@ -3,7 +3,7 @@ title: Overview
 description: 'Start building loyal communities with targeted, gated offers.'
 ---
 
-Datacapture is a core feature of gocertify that allows you to collect valuable data from shoppers in exchange for rewards. With over 80% of shoppers willing to exchange data in return for promotions and 
+DataCapture is a core feature of gocertify that allows you to collect valuable data from shoppers in exchange for rewards. With over 80% of shoppers willing to exchange data in return for promotions and 
 this data is a powerful asset for your brand - enabling you to:
 
 - **Retarget** shoppers who have already visited your site
@@ -14,11 +14,28 @@ this data is a powerful asset for your brand - enabling you to:
 <img
     className="block dark:hidden"
     src="/images/kwikFit.png"
-    alt="Example Datacapture for Kwik Fit"
+    alt="Example DataCapture for Kwik Fit"
     />
     <img
     className="hidden dark:block"
     src="/images/kwikFit.png"
-    alt="Example Datacapture for Kwik Fit"
+    alt="Example DataCapture for Kwik Fit"
 />
+</Frame>
+
+DataCapture is enabled at the brand level with the ability to apply DataCapture to all campaigns or just closed group/open campaigns.
+Once switched on shoppers will experience an additional step in the reward flow where they can opt-in to share their data in return for rewards. This screen will
+appear after login but before verification.
+
+<Frame caption="DataCapture adds an additional step to the reward flow where you can collect data from shoppers">
+  <img
+    className="block dark:hidden"
+    src="/images/dataCaptureFlow.png"
+    alt="DataCapture Flow"
+  />
+  <img
+    className="hidden dark:block"
+    src="/images/dataCaptureFlow.png"
+    alt="DataCapture Flow"
+  />
 </Frame>
