--- a/section/promoteOffers/popups.mdx
+++ b/section/promoteOffers/popups.mdx
@@ -5,7 +5,7 @@ icon: 'window-restore'
 ---
 
 Popups are a great way to keep shoppers in-flow, letting them verify and collect rewards without leaving the page they're browsing.
-To set up a popup simple add an onclick event to your given CTA, button or link and call the gocertify.popup function.
+To set up a popup ensure you have [installed the head script](/section/gettingStarted/integrateOnSite.mdx) and then simply add an onclick event to your given CTA, button or link and call the gocertify.popup function.
 
 
 <CodeGroup>
