--- a/section/trackImpact/report.mdx
+++ b/section/trackImpact/report.mdx
@@ -4,7 +4,7 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'chart-simple'
 ---
 
-The gocertify platform offers a range of reporting tools to help you track the impact of your campaigns. Some example reports are shown below and your account manager can give you a full tour!
+The [gocertify platform](https://secure.gocertify.me/dashboard) offers a range of reporting tools to help you track the impact of your campaigns. Some example reports are shown below and your account manager can give you a full tour!
 
 <img src="/images/gocertify-Dashboard.png" alt="Report" style={{borderRadius: '0.5rem'}} />
 
