--- a/section/captureData/klaviyo.mdx
+++ b/section/captureData/klaviyo.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Klaviyo'
-description: 'Mintlify gives you complete control over the look and feel of your documentation using the mint.json file'
+description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'fa-fw'
 ---
 
