New version for the dynamicText

--- a/section/promoteOffers/dynamicText.mdx
+++ b/section/promoteOffers/dynamicText.mdx
@@ -9,67 +9,65 @@ gocertify makes it easy to display dynamic variables in your on site messages. T
 
 <img src="/images/OSM.png" alt="Dynamic Text" style={{ borderRadius: '0.5rem' }} />
 
-To pass through a variable to your on site message you can use the add one extra line to your [head script](/section/gettingStarted/integrateOnSite): `el.setAttribute('price', '{{variable}}')`. The variable has to match the key of the product attribute you want to display and will be replaced with the actual value when the message is displayed.
-If the attribute with the key you specify does not exist, the variable will not display.
+To enable this feature, you need to let gocertify know a bit more about the page where the placement is
+being displayed. Specifically, we need to know the price and the currency of the product that is being displayed.
 
-Many integrations have built in support for dynamic variables, for instructions expand the relevant section below:
+We do this by adding two extra data attributes called `data-purchase-amount` and `data-locale`, and the way of setting them will depend on
+the integration you are using (See details below).
+
+<Tip>
+  Make sure that the price is set in cents. For example, if the price is $10.99, the attribute should be set to **1099**.
+</Tip>
+<Tip>
+  If you set the locale to **en-GB** and the purchase-amount to **1099**, the price will be interpreted as £10.99.
+  If you leave this locale empty, we will use the main locale of the brand.
+</Tip>
 
 <AccordionGroup>
-<Accordion title="Google Tag Manager" icon="tag">
-Google tag manager supports dynamic variables that are tightly integrated with the data layer.
-<Steps> 
-<Step title="Identify Variable Name">
-Navigate to the variable tab in [tag manager](https://tagmanager.google.com/#) and identify/create the variable that contains product price and note the name.
-To use the variable you'll need to replace the spaces with underscores so `Product Price` would be `product_price`.
-<img src="/images/GTM-variables.png" alt="GTM Variables" style={{ borderRadius: '0.5rem' }} />
-</Step>
-<Step title="Add New Line to Head Script">
-Navigate back to the gocertify head script within the tags section and add a new line using the format `el.setAttribute('price', '{{variable_name}}');` and the variable name you noted in the previous step.
-<img src="/images/GTM-tag-variable.png" alt="GTM Head Script" style={{ borderRadius: '0.5rem' }} />
-</Step>
-<Step title="Save and Publish">
-Save and publish your changes. You should now see dynamic text in your on site messages.
-<img src="/images/GTM-publish.png" alt="GTM Publish" style={{ borderRadius: '0.5rem' }} />
-</Step>
-</Steps>
-</Accordion>
-<Accordion title="Manually added Head Script" icon="code">
-<CodeGroup>
+  <Accordion title="Google Tag Manager" icon="tag">
+    Google tag manager supports dynamic variables that are tightly integrated with the data layer.
+    <Steps>
+      <Step title="Identify Variable Name">
+        Navigate to the variable tab in [tag manager](https://tagmanager.google.com/#) and identify/create the variable that contains product price and note the name.
+        To use the variable you'll need to replace the spaces with underscores so `Product Price` would be `product_price`.
+        <img src="/images/GTM-variables.png" alt="GTM Variables" style={{ borderRadius: '0.5rem' }} />
+      </Step>
+        <Step title="Add New Line to Head Script">
+        Navigate back to the gocertify head script within the tags section and add a new line using the format `el.setAttribute('data-purchase-amount', '{{variable_name}}');` and the variable name you noted in the previous step.
 
-```PHP PHP
-el.setAttribute('price', '{{variable}}')
-```
+        <Tip>
+          Remember that the price should be set in cents, so you should need to parse that value to float and multiply it by 100.
+          For example, `el.setAttribute('data-purchase-amount', parseFloat({{variable_name}}) * 100);`
+        </Tip>
+        <img src="/images/GTM-tag-variable.png" alt="GTM Head Script" style={{ borderRadius: '0.5rem' }} />
+      </Step>
+      <Step title="Save and Publish">
+        Save and publish your changes. You should now see dynamic text in your on site messages.
+        <img src="/images/GTM-publish.png" alt="GTM Publish" style={{ borderRadius: '0.5rem' }} />
+      </Step>
+    </Steps>
+  </Accordion>
 
-```Ruby Ruby
-el.setAttribute('price', '{{variable}}')
-```
+  <Accordion title="Manually added Head Script" icon="code">
+    If you added the gocertify.js script manually in the `<head>` section of your page, you can set the data attributes like this:
+    <CodeGroup>
+      ```javascript JS
+      el.setAttributes('data-purchase-amount', '{{variable}}')
+      ```
+    </CodeGroup>
+  </Accordion>
 
-</CodeGroup>
-</Accordion>
+  <Accordion title="Via inline placement" icon="sign-hanging">
+    If you added the gocertify placement manually in the `<body>` section of your page, you can set the data attributes like this:
+    <CodeGroup>
+      ```PHP PHP
+      <gocertify-placement id="<?= $placementId ?>" data-locale="en-GB" data-purchase-amount="<?= $price ?>"></gocertify-placement>
+      ```
 
-<Accordion title="Via inline placement" icon="sign-hanging">
-<CodeGroup>
-
-```PHP PHP
-el.setAttribute('price', '{{variable}}')
-```
-
-```Ruby Ruby
-el.setAttribute('price', '{{variable}}')
-```
-
-</CodeGroup>
-</Accordion>
+      ```Ruby Ruby
+      <gocertify-placement id="<%= placement_id %>" data-locale="en-GB" data-purchase-amount="<%= price %>"></gocertify-placement>
+      ```
+    </CodeGroup>
+  </Accordion>
 
 </AccordionGroup>
-
-
-
-
-
-
-
-
-
-
-
