updated CuG definitions

--- a/section/buildRewardFlows/closedUserGroups.mdx
+++ b/section/buildRewardFlows/closedUserGroups.mdx
@@ -47,21 +47,21 @@ gocertify supports 40+ closed user groups out of the box and can support additio
 **Student groups**: give rewards to students, apprentices and graduates.
 <AccordionGroup>
   <Accordion title="Students" icon="graduation-cap">
-      **Definition:**
+      **Definition:** a person formally engaged in learning, especially one enrolled in a school, college or university.
       
-      **Verification methods:**
+      **Verification methods:** options include student email, student ID card, via learning portal or UCAS confirmation letter/enrolment letter.
   </Accordion>
 
   <Accordion title="Apprentice" icon="hammer">
-    **Definition:**
+    **Definition:** a person who works for another in order to learn a trade
     
-    **Verification methods:**
+    **Verification methods:** options include a payslip within the last 3 months or an acceptance letter
   </Accordion>
 
   <Accordion title="Graduates" icon="graduation-cap">
-    **Definition:**
+    **Definition:** a person who has received a degree or diploma on completing a course of study, as in a university, college, or school.
     
-    **Verification methods:**
+    **Verification methods:** options include a graduate email or a degree certificate dated within the last year.
   </Accordion>
 
 </AccordionGroup>
@@ -69,21 +69,21 @@ gocertify supports 40+ closed user groups out of the box and can support additio
 **Age:** give rewards based on age categories.
 <AccordionGroup>
   <Accordion title="Youth" icon="alien-8bit">
-      **Definition:**
+      **Definition:** Young people aged between 16 and 24 (can be tailored to specific age ranges).
       
-      **Verification methods:**
+      **Verification methods:** options include passport, birth certificate, driving license or similar government issued ID card with a valid date of birth listed.
   </Accordion>
 
   <Accordion title="Age Discount" icon="image-portrait">
-    **Definition:** Customised
+    **Definition:** Customised age-based discounts.
     
-    **Verification methods:**
+    **Verification methods:** options include passport, birth certificate, driving license or similar government issued ID card with a valid date of birth listed.
   </Accordion>
 
   <Accordion title="Seniors" icon="user">
-    **Definition:**
+    **Definition:** Shoppers aged 60 and over (exact age can be tailored).
     
-    **Verification methods:**
+    **Verification methods:** options include passport, birth certificate, driving license or similar government issued ID card with a valid date of birth listed. We also approve Senior cards in AU or Senior bus passes.
   </Accordion>
 
 </AccordionGroup>
@@ -93,69 +93,70 @@ gocertify supports 40+ closed user groups out of the box and can support additio
 <AccordionGroup>
 
   <Accordion title="Healthcare" icon="heart">
-    **Definition:**
+    **Definition:** a provider of health care treatment and advice based on formal training and experience.
     
-    **Verification methods:**
+    **Verification methods:** options include work ID, payslip, certification of practice or work email
   </Accordion>
 
   <Accordion title="Teacher" icon="chalkboard-user">
-    **Definition:**
+    **Definition:** an educator who helps students acquire knowledge and valuable skills.
     
-    **Verification methods:**
+    **Verification methods:** options include work ID, payslip, certification of practice or work email
   </Accordion>
 
   <Accordion title="Military" icon="shield-halved">
-      **Definition:**
+      **Definition:** Someone who serves or has served in the armed forces; a member of a military force.
       
-      **Verification methods:**
+      **Verification methods:** options include military email, ID card, Veterans ID, Discharge Form, War pension or Veterans Railcard.
   </Accordion>
 
   <Accordion title="Police & Fire Service" icon="fire-extinguisher">
-    **Definition:**
+    **Definition:** Someone who works for a police force or fire service.
     
-    **Verification methods:**
+    **Verification methods:** options include work ID, work email, payslip, P45 or pension document.
   </Accordion>
 
   <Accordion title="First Responder" icon="truck-medical">
-    **Definition:**
+    **Definition:** A person, such as a police officer, firefighter, or EMT, trained in urgent medical care and other emergency procedures.
     
-    **Verification methods:**
+    **Verification methods:** options include work ID, work email, payslip or pension document.
   </Accordion>
 
   <Accordion title="Delivery & Transport Staff" icon="truck">
-    **Definition:**
+    **Definition:** A person involved in loading, transporting, and delivering items to clients or businesses.
     
-    **Verification methods:**
+    **Verification methods:** Options include work ID, work email, payslip or drivers card (usually required by HGV drivers).
+
   </Accordion>
 
   <Accordion title="Supermarket Staff" icon="cart-shopping">
-    **Definition:**
+    **Definition:** A person who works in a large self-service retail market that sells food and household goods. 
     
-    **Verification methods:**
+    **Verification methods:** options include work ID, work email, payslip.
   </Accordion>
 
   <Accordion title="Charity Worker" icon="hand-holding-heart">
-    **Definition:**
+    **Definition:** A person who does unpaid work, usually fundraising, in aid of a charity
     
-    **Verification methods:**
+    **Verification methods:** options include work ID supported with a valid charity number, work email, payslip (if paid worker).
   </Accordion>
 
   <Accordion title="Australian Defence Force" icon="shield-halved">
-    **Definition:**
+    **Definition:** A person who has worked for the military organisation responsible for the defence of the Commonwealth of Australia and its national interests
     
-    **Verification methods:**
+    **Verification methods:** options include defence email, work payslip or pension document.
   </Accordion>
 
   <Accordion title="Social Worker" icon="hands-holding-child">
-    **Definition:**
+    **Definition:** A person that helps people and communities overcome challenges and achieve well-being.
     
-    **Verification methods:**
+    **Verification methods:** options include work ID, work email, payslip, carers allowance or proof they are on the social register supported by a valid ID card e.g. driving licence.
   </Accordion>
 
   <Accordion title="Emergency Service Workers" icon="user-nurse">
-    **Definition:**
+    **Definition:** A person, such as a police officer, firefighter, or EMT, trained in urgent medical care and other emergency procedures.
     
-    **Verification methods:**
+    **Verification methods:** options include work ID, work email, payslip or pension document.
   </Accordion>
 
 </AccordionGroup>
@@ -165,21 +166,21 @@ gocertify supports 40+ closed user groups out of the box and can support additio
 <AccordionGroup>
 
 <Accordion title="Social follower" icon="hashtag">
-    **Definition:**
+    **Definition:** A person who follows your brand's social media account.
     
-    **Verification methods:**
+    **Verification methods:** a screenshot of the user following the brand on the named social media page.
   </Accordion>
 
   <Accordion title="Strava" icon="person-running">
-    **Definition:**
+    **Definition:** A person who uses the Strava app to track their running, cycling, swimming or other activities.
     
-    **Verification methods:**
+    **Verification methods:** a screenshot of the user's Strava activity.
   </Accordion>
 
   <Accordion title="Donate" icon="circle-dollar-to-slot">
-    **Definition:**
+    **Definition:** A person who has donated to a charity.
     
-    **Verification methods:**
+    **Verification methods:** with help from JustGiving, a user follows their platform via our link to verify their donation.
   </Accordion>
 
 </AccordionGroup>
@@ -199,15 +200,16 @@ gocertify supports 40+ closed user groups out of the box and can support additio
 
 
   <Accordion title="Maternity Leave" icon="baby-carriage">
-    **Definition:**
+    **Definition:** A person who is pregnant or has a baby and is taking leave off work
     
-    **Verification methods:**
+    **Verification methods:** screenshot of NHS maternity prescription exemption certificate.
   </Accordion>
 
   <Accordion title="Employee Discount" icon="briefcase">
-    **Definition:**
+    **Definition:** A person who works for your brand.
     
-    **Verification methods:**
+    **Verification methods:** employees can verify with their company email.
+
   </Accordion>
 
 
