added menu links

--- a/section/promoteOffers/linking-to-offers.mdx
+++ b/section/promoteOffers/linking-to-offers.mdx
@@ -29,8 +29,11 @@ If you'd rather not redirect shoppers off-site, consider using a [popup](/sectio
   <Card title="Hero Sections" img="/images/OSM-PromotionalSection.png">
      Deploy highly visible promotional/hero sections that drive conversion
   </Card>
-  <Card title="Menu Items & Footer Links" img="/images/OSM-footerLink.png">
-    Link to hosted rewards pages from high traffic areas of your site, i.e. the footer or menu items.
+  <Card title="Footer Links" img="/images/OSM-footerLink.png">
+    Link to hosted rewards pages from high traffic areas of your site, i.e. the footer.
+  </Card>
+  <Card title="Menu Items" img="/images/OSM-menuLink.png">
+    Link to hosted rewards pages from high traffic areas of your site, i.e. the menu items.
   </Card>
   
 </CardGroup>
