--- a/section/captureData/overview.mdx
+++ b/section/captureData/overview.mdx
@@ -23,7 +23,7 @@ this data is a powerful asset for your brand - enabling you to:
   />
 </Frame>
 
-DataCapture is enabled at the brand level with the ability to apply DataCapture to all campaigns or just closed group/open campaigns.
+DataCapture is enabled at the brand level with the ability to apply DataCapture to all campaigns or just closed group/open campaigns. To go live we will need your Privacy Policy and Terms and Conditions links which should outline how shopper data is used within marketing.
 Once switched on shoppers will experience an additional step in the reward flow where they can opt-in to share their data in return for rewards. This screen will
 appear after login but before verification.
 
