adding CDP pages

--- a/section/captureData/klaviyo.mdx
+++ b/section/captureData/klaviyo.mdx
@@ -4,8 +4,7 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'fa-fw'
 ---
 
-When a shopper submits their email and/or mobile number, gocertify will send this data to the customer's Klaviyo account. This is represented by a “Profile” (that could previously exist).
-
+When a shopper submits their email and/or mobile number, gocertify will send this data to the your Klaviyo account in the form of a gocertify event. This is represented by a “Profile” (either augmenting an existing one or creating a new one).
 As the shopper goes on to successfully verify as a target group (student, healthcare, senior, etc) another “Event” will be triggered, with the label “verified as __”. 
 
 With this data, you will be able to generate segments based on these events.
@@ -17,7 +16,7 @@ In order to go live with Klaviyo, we will need the following:
 - Private Klaviyo API Key
 - Main Klaviyo lists for Email and SMS
 
-### Private Klaviyo API Key
+### Share Private Klaviyo API Key
 Please share a Private Klaviyo API Key must be generated and provided to the gocertify team. [See here how to generate one](https://help.klaviyo.com/hc/en-us/articles/7423954176283#before-you-begin1).
 
 This API Key must be a “Custom” one, giving “Full Access” to Events, List, Profiles and Subscriptions, as shown here.
@@ -37,7 +36,7 @@ This API Key must be a “Custom” one, giving “Full Access” to Events, Lis
 />
 </Frame>
 
-### Main Klaviyo lists for Email and SMS
+### Share Main Klaviyo list names
 Please share the names of [your main Klaviyo lists](https://help.klaviyo.com/hc/en-us/articles/360043947571) (which have marketing consent) for:
 
 1. Email
