--- a/section/captureData/ometria.mdx
+++ b/section/captureData/ometria.mdx
@@ -4,3 +4,8 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'fa-fw'
 ---
 
+## Requirements to go live
+
+## How data will appear in  Ometria
+
+## How to create segments in Ometria
