--- a/section/captureData/dotdigital.mdx
+++ b/section/captureData/dotdigital.mdx
@@ -4,3 +4,291 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'fa-fw'
 ---
 
+When a shopper submits their email and/or mobile number, gocertify will send this data to the your Dotdigital account in the form of a gocertify event. This is represented by a “Profile” (either augmenting an existing one or creating a new one).
+
+As the shopper goes on to successfully verify as a target group (student, healthcare, senior, etc) another “Event” will be triggered, gocertify will update the Contact, setting a new field called `GC_{{VERIFIED_GROUP}}_AT` with the current date in IS08601 format.
+We will create as many fields to the Contact object as needed according to the campaigns set with gocertify and use the “group_verification” from boththe Parent Group and the Child Group. For example, if you are running a Military campaign, you will see 2 fields:
+
+    - GC_MILITARY_AT
+    - GC_KEY_WORKER_AT
+
+With this data, you will be able to generate segments based on these events.
+
+<Tip>
+    gocertify is going to truncate the verified group to 14 characters, because we can’t create a data field in Dotdigital larger than 20 characters.
+</Tip>
+
+## Requirements to go live
+To go live with dotdigital you will need to create an API user and share the details with gocertify.
+<Accordion title="See step by step tutorial">
+<Steps>
+    <Step title="Access Project Settings">
+        Sign in to your [Bloomreach Engagement](https://engagement.bloomreach.com) instance and in the top right corner, click on the settings icon and then “Project settings”.
+
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalProjectSettings.png"
+        alt="Dotdigital Project Settings"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalProjectSettings.png"
+        alt="Dotdigital Project Settings"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+    </Step>
+    <Step title="Navigate to Access Settings">
+        In the accounts settings choose the “Access” option
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalAccessSettings.png"
+        alt="Dotdigital Access Settings"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalAccessSettings.png"
+        alt="Dotdigital Access Settings"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+    </Step>
+    <Step title="Navigate to API users">
+    In the settings access choose “API users”.
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalAPIusers.png"
+        alt="Dotdigital API users"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalAPIusers.png"
+        alt="Dotdigital API users"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+    </Step>
+    <Step title="Start creating the API user">
+        Create the a new API user clicking the “New user” button.
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalAPIUser.png"
+        alt="Dotdigital API user"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalAPIUser.png"
+        alt="Dotdigital API user"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+    </Step>
+    <Step title="Fill the required information">
+        Fill the required information for the new user and click the save button to create the new API user. Make sure you select “TIERED” as rate limit option.
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalAPIUserInfo.png"
+        alt="Dotdigital API user info"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalAPIUserInfo.png"
+        alt="Dotdigital API user info"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+    </Step>
+    <Step title="Ensure new user is enabled">
+        Make sure the new created user is enabled. 
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalEnableUser.png"
+        alt="Dotdigital enable user"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalEnableUser.png"
+        alt="Dotdigital enable user"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+        If not please click the pen icon to edit it. Set the status as Enabled and click the save button.
+
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalEnableUserToggle.png"
+        alt="Dotdigital enable user toggle"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalEnableUserToggle.png"
+        alt="Dotdigital enable user toggle"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+
+    </Step>
+
+    <Step title="Copy the user details">
+        Copy the user's email address and password for the user recently created.
+    </Step>
+
+    <Step title="Share the user details with gocertify">
+        Go to onetimesecret.com and paste the copied user email and the password. Even if it's not required, we encourage you to also add a random “Passphrase”. 
+        This will generate a secret link that will expire within 7 days and will be visible only once.
+
+        Share this link with your Customer Success Manager, we will set this User name and Secret in our systems to continue the integration
+
+        <img
+        className="block dark:hidden"
+        src="/images/onetimeSecret.png"
+        alt="Onetime Secret"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/onetimeSecret.png"
+        alt="Onetime Secret"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+    </Step>
+
+</Steps>
+</Accordion>
+
+## How data will appear in Dotdigital
+Once the user shares their information with your brand and the user confirms the subscription request (verified double Opt-in option), you will see a new contact in your base,
+with the email and mobile_number (if it's shared) and the respective Opt-in option.
+
+<Frame caption="Example of a Dotdigital user created by gocertify">
+<img
+  className="block dark:hidden"
+  src="/images/dotDigitalUser.png"
+  alt="Dotdigital user"
+  style={{ borderRadius: '0.5rem' }}
+/>
+<img
+  className="hidden dark:block"
+  src="/images/dotDigitalUser.png"
+  alt="Dotdigital user"
+  style={{ borderRadius: '0.5rem' }}
+/>
+</Frame>
+
+After the user verifies themself, gocertify will update the contact in your base, adding as many `GC_XXXX_AT` data fields as needed, with the current date in ISO8601 format.
+
+You will see something like this:
+
+<Tip>
+    Note that we will use uppercase and underscores for the data field name (ie: “KEY_WORKER” instead of “Key Worker”)
+</Tip>
+
+<Frame caption="Example of a Dotdigital user with the respective GC_XXXX_AT fields">
+<img
+  className="block dark:hidden"
+  src="/images/dotDigitalVerification.png"
+  alt="Dotdigital verification"
+  style={{ borderRadius: '0.5rem' }}
+/>
+<img
+  className="hidden dark:block"
+  src="/images/dotDigitalVerification.png"
+  alt="Dotdigital verification"
+  style={{ borderRadius: '0.5rem' }}
+/>
+</Frame>
+
+## How to create segments in Dotdigital
+
+Once you start receiving data from gocertify, you will be able to set all the Segments you desire.
+
+In the side menu, go to “Audience” > “Segments” and then follow the steps to create a new segment based on the data fields created by gocertify.
+
+<Accordion title="See step by step tutorial">
+<Steps>
+    <Step title="Click the “New Segment” button.">
+        In the side menu, go to “Audience” > “Segments” and then follow the steps to create a new segment based on the data fields created by gocertify.
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalNewSegment.png"
+        alt="Dotdigital new segment"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalNewSegment.png"
+        alt="Dotdigital new segment"
+        style={{ borderRadius: '0.5rem' }}
+        />
+    </Step>
+    <Step title="Choose a template.">
+        Choose a template to get started.
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalTemplate.png"
+        alt="Dotdigital template"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalTemplate.png"
+        alt="Dotdigital template"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+    </Step>
+    <Step title="Name segment">
+        Give your segment a name that helps you and your team identify it.
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalTemplateName.png"
+        alt="Dotdigital template name"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalTemplateName.png"
+        alt="Dotdigital template name"
+        style={{ borderRadius: '0.5rem' }}
+        />
+    </Step>
+    <Step title="Add filters">
+        Add the conditions you want to filter your audience.
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalSegmentFilters.png"
+        alt="Dotdigital segment filters"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalSegmentFilters.png"
+        alt="Dotdigital segment filters"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+        <img
+        className="block dark:hidden"
+        src="/images/dotDigitalContactFilters.png"
+        alt="Dotdigital contact filters"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/dotDigitalContactFilters.png"
+        alt="Dotdigital contact filters"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+
+    </Step>
+</Steps>
+</Accordion>
