--- a/section/captureData/emarsys.mdx
+++ b/section/captureData/emarsys.mdx
@@ -4,3 +4,245 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'fa-fw'
 ---
 
+Once the user submits their email and/or mobile number, gocertify will send this data your Emarsys account, creating (or updating) a *Contact*, with the “Opt-in” field set as `True`. Gocertify will also trigger an *External Event* called `gocertify_consent_intent`, which can be used to create automations.
+
+After that screen, when the user successfully verifies as a target group (student, healthcare, senior, etc), gocertify will update the Contact, setting a new field called “gocertify_student_verified_at” with the current date, useful to generate *Segments*. 
+gocertify will also trigger another External Event called `gocertify_offer_claimed`, that can be used to initiate another automation.
+
+## Requirements to go live
+To start syncing data you'll need to create a new API user and share the details with your gocertify account manager.
+
+<Accordion title="See step by step tutorial">
+    <Steps>
+        <Step title="Create a new API user">
+            Sign into [Emarsys](https://login.emarsys.net/bootstrap.php?r=customer/Login) and in the sidebar menu, click in “Management” and then choose “Security Settings”.
+            <img
+            className="block dark:hidden"
+            src="/images/emarsysSecuritySettings.png"
+            alt="Emarsys security settings"
+            style={{ borderRadius: '0.5rem' }}
+            />
+            <img
+            className="hidden dark:block"
+            src="/images/emarsysSecuritySettings.png"
+            alt="Emarsys security settings"
+            style={{ borderRadius: '0.5rem' }}
+            />
+
+        </Step>
+        <Step title="Create a new API user">
+        In the Security Settings module, choose the “API” icon in the left and then click on “Create API user”. Then confirm the creation.
+
+        <img
+        className="block dark:hidden"
+        src="/images/emarsysAPIUser.png"
+        alt="Emarsys API user"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/emarsysAPIUser.png"
+        alt="Emarsys API user"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        </Step>
+        <Step title="Copy the API key">
+        Copy the User name and Secret from this interface
+        <img
+        className="block dark:hidden"
+        src="/images/emarsysAPIkey.png"
+        alt="Emarsys API key"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/emarsysAPIkey.png"
+        alt="Emarsys API key"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+        </Step>
+
+        <Step title="Share the user details with gocertify">
+        Go to onetimesecret.com and paste the copied user email and the password. Even if it's not required, we encourage you to also add a random “Passphrase”. 
+        This will generate a secret link that will expire within 7 days and will be visible only once.
+
+        Share this link with your Customer Success Manager, we will set this User name and Secret in our systems to continue the integration
+
+        <img
+        className="block dark:hidden"
+        src="/images/onetimeSecret.png"
+        alt="Onetime Secret"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/onetimeSecret.png"
+        alt="Onetime Secret"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+    </Step>
+    <Step title="Edit API user">
+    In the list of all your API users, go to the one you just created and click on the Edit (the pen) icon.
+    <img
+    className="block dark:hidden"
+    src="/images/emarsysEditAPIUser.png"
+    alt="Emarsys edit API user"
+    style={{ borderRadius: '0.5rem' }}
+    />
+    <img
+    className="hidden dark:block"
+    src="/images/emarsysEditAPIUser.png"
+    alt="Emarsys edit API user"
+    style={{ borderRadius: '0.5rem' }}
+    />
+    </Step>
+
+    <Step title="Authorise the API user">
+    Authorise the API user to do all the automations we described in the overview, enabling all the checkboxes shown below:
+    <img
+    className="block dark:hidden"
+    src="/images/emarsysContactAuthorisation.png"
+    alt="Emarsys contact authorisation"
+    style={{ borderRadius: '0.5rem' }}
+    />
+    <img
+    className="hidden dark:block"
+    src="/images/emarsysContactAuthorisation.png"
+    alt="Emarsys contact authorisation"
+    style={{ borderRadius: '0.5rem' }}
+    />
+    <img
+    className="block dark:hidden"
+    src="/images/emarsysEventAndFieldAuthorisation.png"
+    alt="Emarsys event and field authorisation"
+    style={{ borderRadius: '0.5rem' }}
+    />
+    <img
+    className="hidden dark:block"
+    src="/images/emarsysEventAndFieldAuthorisation.png"
+    alt="Emarsys event and field authorisation"
+    style={{ borderRadius: '0.5rem' }}
+    />
+
+    </Step>
+
+    <Step title="Navigate to Field Editor">
+    In the side menu, go to “Management” and then “Field Editor”
+    <img
+    className="block dark:hidden"
+    src="/images/emarsysFieldEditor.png"
+    alt="Emarsys field editor"
+    style={{ borderRadius: '0.5rem' }}
+    />
+    <img
+    className="hidden dark:block"
+    src="/images/emarsysFieldEditor.png"
+    alt="Emarsys field editor"
+    style={{ borderRadius: '0.5rem' }}
+    />
+
+    </Step>
+
+    <Step title="Collect the field ID and share with gocertify">
+    Collect the *Field ID* for the following fields:
+
+    - **Email** (it's usually “3”)
+    - **Opt-in** (it's usually “31”)
+    - **Mobile** (it's usually “37”)
+    - **Mobile SMS Opt-In** (it's usually “6949”)
+    </Step>
+
+    </Steps>
+</Accordion>
+
+## How data will appear in Emarsys
+
+Once the user shares their information with your brand, you will see a new Contact in your base, with the email and mobile_number (if it's enabled) and the respective Opt-in fields set as *true* (*Opt-in* and *Mobile SMS Opt-In*).
+
+Together with the creation (update) of the Contact, gocertify will create and trigger an External event, called “gocertify_consent_intent”. After the user verifies themself, gocertify will update the Contact in your base, adding as many “gocertify_xxx_verified_at” fields as needed, with the current date.
+
+<CodeGroup>
+```json First Event
+{
+  type: "Code",                         // ← it could be "Code" or "Deal"
+  pending_group_type: "Occupation",     // ← might not be present
+  pending_group_parent: "Key Worker",   // ← might not be present
+  pending_group_child: "NHS Worker",    // ← might not be present
+  token: "ABCD1234",                    // ← our internal randomly generated identifier
+  subid: "user_1",                      // ← optional, for custom tracking           
+  brand_slug: "amazon",                 // ← the identifier of the customer
+  brand_country: "GB",                  // ← the country set in our system
+  user_country: "GB",                   // ← the user's country (based on their mobile number, if shared)
+  campaign_id: 1234,                    // ← the gocertify's campaign's identifier
+  campaign_title: "20% OFF for Key Workers",  // ← the title of the campaign
+  campaign_url: "https://secure.gocertify.me/at/amazon",   // ← the url of our campaign
+  iframe_parent_url: "https://www.customer-website/keyworkers",  // ← might not be present
+  date: Time.now.iso8601                // ← the current date, in iso8601 format.
+}
+```
+```json Second Event
+   {
+  type: "Code",                         // ← it could be "Code" or "Deal"
+  group_type: "Occupation",             // ← might not be present
+  group_parent: "Key Worker",           // ← might not be present
+  group_child: "NHS Worker",            // ← might not be present
+  token: "ABCD1234",                    // ← our internal randomly generated identifier
+  subid: "user_1",                      // ← optional, for custom tracking           
+  brand_slug: "amazon",                 // ← the identifier of the customer
+  brand_country: "GB",                  // ← the country set in our system
+  user_country: "GB",                   // ← the user's country (based on their mobile number, if shared)
+  campaign_id: 1234,                    // ← the gocertify's campaign's identifier
+  campaign_title: "20% OFF for Key Workers",  // ← the title of the campaign
+  campaign_url: "https://secure.gocertify.me/at/amazon",   // ← the url of our campaign
+  iframe_parent_url: "https://www.customer-website/keyworkers",  // ← might not be present
+  date: Time.now.iso8601,               // ← the current date, in iso8601 format.
+  code: "COUPONCODE"
+}
+```
+</CodeGroup>
+
+Within your account you will see the shopper:
+
+<Frame caption="Example shopper profile within Emarsys">
+    <img
+    className="block dark:hidden"
+    src="/images/emarysysShopper.png"
+    alt="Example shopper"
+    style={{ borderRadius: '0.5rem' }}
+    />
+    <img
+    className="hidden dark:block"
+    src="/images/emarysysShopper.png"
+    alt="Example shopper"
+    style={{ borderRadius: '0.5rem' }}
+    />
+</Frame>
+
+## How to create segments in Emarsys
+
+Once you start receiving data from gocertify, you will be able to set all the Segments you desire.
+
+In the side menu, go to “Contacts” > “Segments” and then create a new one. In the Criteria filter, you will have all the “gocertify_xxx_verified_at” fields. Depending on your needs, you can use one, or many conditions.
+
+<Frame caption="Example of how to segment gocertify shoppers within Emarsys">
+    <img
+    className="block dark:hidden"
+    src="/images/emarsysSegmentation.png"
+    alt="Emarsys segmentation"
+    style={{ borderRadius: '0.5rem' }}
+    />
+    <img
+    className="hidden dark:block"
+    src="/images/emarsysSegmentation.png"
+    alt="Emarsys segmentation"
+    style={{ borderRadius: '0.5rem' }}
+    />
+</Frame>
+
+If you want to create a Segment with all the Contacts verified through gocertify, you will need to define that “any of those fields” is not empty.
+
+If you want to create a Segment with only “Transport” workers, simply use the “gocertify_transport_verified_at” field.
+
+If you want to create a Segment with “all the key workers”, simpy use the “gocertify_key_worker_verified_at” field.
